--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Xuca Ceramica</title>
   </head>
   <body>
+    <header>
     <!-- Logo Nav-->
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container">
@@ -68,6 +69,7 @@
         </div>
       </div>
     </div>
+  </header>
     <div class="container">
       <div class="container-fluid">
       <div class="row">
@@ -99,7 +101,15 @@
       </div>
     </div>
   </div>
-    
+  <footer>
+    <div class="d-flex justify-content-center">
+      <h4 class="p-2">Nuestras redes sociales</h4>
+      <div class="p-2">Instragram</div>
+      <div class="p-2">Facebook</div>
+      <div class="p-2">TikTok</div>
+    </div>
+
+  </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
