Agregue redes sociales

--- a/index.html
+++ b/index.html
@@ -104,9 +104,13 @@
   <footer>
     <div class="d-flex justify-content-center">
       <h4 class="p-2">Nuestras redes sociales</h4>
-      <div class="p-2">Instragram</div>
-      <div class="p-2">Facebook</div>
-      <div class="p-2">TikTok</div>
+      <div class="p-2"><a href="https://www.instagram.com/xuca.ceramiquitas/?hl=es"
+        >Instagram</a
+      ></div>
+      <div class="p-2"><a href="https://www.facebook.com/xuca.ceramiquitass">Facebook</a></div>
+      <div class="p-2"> <a href="https://www.tiktok.com/@xucaceramiquitas?lang=es"
+        >TikTok</a
+      ></div>
     </div>
 
   </footer>
