--- a/index.html
+++ b/index.html
@@ -16,104 +16,171 @@
   </head>
   <body>
     <header>
-    <!-- Logo Nav-->
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <img
-            src="./img/4A480FBE-E14D-4DBF-94F1-4DA990E6C56C.PNG"
-            alt="Logo"
-            width="100"
-            height="100"
-          />
-        </a>
-      </div>
-      <!-- Nav -->
-      <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./cursos.html">Cursos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./quienes.html">Quienes Somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
-            </li>
-          </ul>
+      <!-- Logo Nav-->
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="./index.html">
+            <img
+              src="./img/4A480FBE-E14D-4DBF-94F1-4DA990E6C56C.PNG"
+              alt="Logo"
+              width="100"
+              height="100"
+            />
+          </a>
+        </div>
+        <!-- Nav -->
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cursos.html">Cursos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./quienes.html">Quienes Somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Carousel -->
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./img/1.PNG"
+              class="d-block w-50"
+              alt="Cerámica Artesanal"
+            />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/3.PNG" class="d-block w-50" alt="Productos" />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/2.PNG" class="d-block w-50" alt="100% artesanal" />
+          </div>
         </div>
       </div>
-    </nav>
-    <!-- Carousel -->
-    <div
-      id="carouselExampleSlidesOnly"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner" >
-        <div class="carousel-item active">
-          <img src="./img/1.PNG" class="d-block w-50" alt="Cerámica Artesanal" />
-        </div>
-        <div class="carousel-item">
-          <img src="./img/3.PNG" class="d-block w-50" alt="Productos" />
-        </div>
-        <div class="carousel-item">
-          <img src="./img/2.PNG" class="d-block w-50" alt="100% artesanal" />
-        </div>
-      </div>
-    </div>
-  </header>
+    </header>
     <div class="container">
       <div class="container-fluid">
-      <div class="row">
-        <!-- Primera Columna -->
-        <div class="col-8">
-          <p class="fs-1">Productos únicos</p>
-          <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia assumenda eum asperiores, nesciunt excepturi nam maiores porro pariatur facilis error, eaque architecto, tempora nemo. Assumenda deserunt aspernatur minus hic vitae? Eos, numquam voluptatibus molestias repellat illum aut aspernatur enim dignissimos esse qui officia voluptatem in, possimus nulla architecto sunt molestiae voluptates voluptate nesciunt rerum, vel hic. Illum sit blanditiis dicta distinctio vel velit quae impedit voluptas a mollitia illo qui maxime id ullam sed reiciendis, sequi ea amet. Sint asperiores ullam, nemo nam officia fuga a labore repudiandae animi alias quasi accusantium tenetur voluptate? Excepturi cum commodi fugiat odio, provident fugit dolores nisi! Veritatis culpa quaerat architecto vero obcaecati, eum excepturi doloribus adipisci natus, numquam in voluptatibus ullam. Non sequi quas atque esse quasi possimus cum voluptate a alias accusamus exercitationem incidunt accusantium molestias minima eius modi voluptatibus neque omnis, vitae dolores? Aut nihil eaque reiciendis quibusdam? Facere, aut voluptas.</p>
-        </div>
-        <!-- Segunda Columna -->
-        <div class="col-4">
-          <h3 class="text-center">Contactanos!</h3>
-          <form>
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
+        <div class="row">
+          <!-- Primera Columna -->
+          <div class="col-8">
+            <p class="fs-1">Productos únicos</p>
+            <p class="text-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+              assumenda eum asperiores, nesciunt excepturi nam maiores porro
+              pariatur facilis error, eaque architecto, tempora nemo. Assumenda
+              deserunt aspernatur minus hic vitae? Eos, numquam voluptatibus
+              molestias repellat illum aut aspernatur enim dignissimos esse qui
+              officia voluptatem in, possimus nulla architecto sunt molestiae
+              voluptates voluptate nesciunt rerum, vel hic. Illum sit blanditiis
+              dicta distinctio vel velit quae impedit voluptas a mollitia illo
+              qui maxime id ullam sed reiciendis, sequi ea amet. Sint asperiores
+              ullam, nemo nam officia fuga a labore repudiandae animi alias
+              quasi accusantium tenetur voluptate? Excepturi cum commodi fugiat
+              odio, provident fugit dolores nisi! Veritatis culpa quaerat
+              architecto vero obcaecati, eum excepturi doloribus adipisci natus,
+              numquam in voluptatibus ullam. Non sequi quas atque esse quasi
+              possimus cum voluptate a alias accusamus exercitationem incidunt
+              accusantium molestias minima eius modi voluptatibus neque omnis,
+              vitae dolores? Aut nihil eaque reiciendis quibusdam? Facere, aut
+              voluptas.
+            </p>
+          </div>
+          <!-- Segunda Columna -->
+          <div class="col-4">
+            <h3 class="text-center">Contactanos!</h3>
+            <form>
+              <div class="row mb-3">
+                <label for="inputEmail3" class="col-sm-2 col-form-label"
+                  >Email</label
+                >
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" />
+                </div>
               </div>
-            </div>
-            <div class="row mb-3">
-              <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                <label for="floatingTextarea2">Comentario</label>
+              <div class="row mb-3">
+                <div class="form-floating">
+                  <textarea
+                    class="form-control"
+                    placeholder="Leave a comment here"
+                    id="floatingTextarea2"
+                    style="height: 100px"
+                  ></textarea>
+                  <label for="floatingTextarea2">Comentario</label>
+                </div>
               </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-          </form>
-
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <div class="d-flex justify-content-center">
-      <h4 class="p-2">Nuestras redes sociales</h4>
-      <div class="p-2"><a href="https://www.instagram.com/xuca.ceramiquitas/?hl=es"
-        >Instagram</a
-      ></div>
-      <div class="p-2"><a href="https://www.facebook.com/xuca.ceramiquitass">Facebook</a></div>
-      <div class="p-2"> <a href="https://www.tiktok.com/@xucaceramiquitas?lang=es"
-        >TikTok</a
-      ></div>
+    <div class="container-fluid">
+      <!-- seccion packaging -->
+      <p class="h3">Packaging ecológico</p>
+      <p>
+        <em
+          >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla esse
+          soluta, totam debitis, placeat dignissimos porro, officia officiis et
+          quis reprehenderit hic rem fugiat adipisci. Aliquid culpa odit
+          explicabo ipsa ut sequi vitae alias ab accusantium et quae, nostrum
+          soluta incidunt provident totam nobis recusandae qui! Sunt ex sint ut,
+          nam officiis distinctio. Sed voluptatum laboriosam et odio quos sunt
+          adipisci dicta recusandae quaerat. Sequi impedit repellendus eos,
+          rerum veniam dignissimos minima perferendis commodi quasi quos? Maxime
+          nobis, autem quo ipsam optio, id commodi laborum in iusto provident
+          dolorum perspiciatis doloremque. Doloremque mollitia ipsam iusto
+          asperiores, tempore aut nisi itaque!</em
+        >
+      </p>
     </div>
-
-  </footer>
+    <!-- Imagenes packaging -->
+    <div class="container-fluid">
+      <div class="divImagenes">
+    <img src="./img/IMG-0939.JPG"  class="imagenPackaging"  alt="Packaging" />
+    <img src="./img/IMG-0673 (2).jpg" class="imagenPackaging" alt="Packaging" />
+  </div>
+  </div>
+    <!-- Footer -->
+    <footer>
+      <div class="d-flex justify-content-center">
+        <h4 class="p-2">Nuestras redes sociales</h4>
+        <div class="p-2">
+          <a
+            class="enlaces"
+            href="https://www.instagram.com/xuca.ceramiquitas/?hl=es"
+            >Instagram</a
+          >
+        </div>
+        <div class="p-2">
+          <a class="enlaces" href="https://www.facebook.com/xuca.ceramiquitass"
+            >Facebook</a
+          >
+        </div>
+        <div class="p-2">
+          <a
+            class="enlaces"
+            href="https://www.tiktok.com/@xucaceramiquitas?lang=es"
+            >TikTok</a
+          >
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
