Agregue video y footer

--- a/cursos.html
+++ b/cursos.html
@@ -57,10 +57,47 @@
               <div class="row">
                 <!-- Contenido principal -->
                 <div class="col-12">
-                  <p class="fs-1">Información sobre Cursos</p>
+                  <p class="fs-1">Información sobre nuestros cursos</p>
                   <p class="text-center">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, placeat quos minima quisquam ad accusantium, ipsa, optio in aperiam obcaecati eveniet. Quaerat sit veritatis id laborum exercitationem sed deserunt mollitia hic ex, libero iure consequatur vitae vel inventore natus sunt eligendi fugiat quibusdam molestias laboriosam soluta quos ad qui. Nam, mollitia est inventore at laborum omnis voluptas velit nesciunt dolor deleniti minus ratione tenetur ducimus, quaerat fugit nostrum amet sunt tempore libero dolores cumque voluptatem aspernatur. Omnis tempora iste sapiente modi molestiae optio neque excepturi id praesentium dolor enim consequatur distinctio totam accusamus nam, qui magni quod rem cumque aperiam facere aliquam? Possimus sunt eaque quasi adipisci deleniti corrupti ratione, doloribus debitis maxime, earum, explicabo doloremque nesciunt repellat! Vitae quo sapiente fugiat, necessitatibus quis labore quisquam vero commodi, nobis porro velit officiis similique odio aut ducimus dolore atque hic animi. Esse, doloremque. Ut labore accusantium repellendus repudiandae iure doloremque libero iusto? Tempora modi neque minus enim facilis repellendus molestias unde vel numquam deserunt eveniet nesciunt temporibus perspiciatis est perferendis praesentium similique, quidem atque laborum! Temporibus reiciendis beatae cumque praesentium dolor animi, atque fugiat perspiciatis possimus dolore nostrum sed totam nam corporis, veniam a hic perferendis! Illum incidunt ullam quidem dolorum.
                   </p>
                 </div>
-      </main>
+            </div>
+        </div>
+    </div>
+                <!-- TITULO + VIDEO -->
+                <div class="divVideo">
+                <h4 class="text-center">Un poquito de lo que hacemos:</h4>
+                <video class="video" src="./img/d64c7ce3c53544a5aee16ba5c93df251 (1).mov" controls muted autoplay></video>
+                </div>
+            </main>
+            <footer>
+                <div class="d-flex justify-content-center">
+                  <h4 class="p-2">Nuestras redes sociales</h4>
+                  <div class="p-2">
+                    <a
+                      class="enlaces"
+                      href="https://www.instagram.com/xuca.ceramiquitas/?hl=es"
+                      >Instagram</a
+                    >
+                  </div>
+                  <div class="p-2">
+                    <a class="enlaces" href="https://www.facebook.com/xuca.ceramiquitass"
+                      >Facebook</a
+                    >
+                  </div>
+                  <div class="p-2">
+                    <a
+                      class="enlaces"
+                      href="https://www.tiktok.com/@xucaceramiquitas?lang=es"
+                      >TikTok</a
+                    >
+                  </div>
+                </div>
+              </footer>
+              <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+                crossorigin="anonymous"
+              ></script>
     </body>
