Agregue la seccion de contacto

--- a/cursos.html
+++ b/cursos.html
@@ -68,7 +68,7 @@
                 <!-- TITULO + VIDEO -->
                 <div class="divVideo">
                 <h4 class="text-center">Un poquito de lo que hacemos:</h4>
-                <video class="video" src="./img/d64c7ce3c53544a5aee16ba5c93df251 (1).mov" controls muted autoplay></video>
+                <video class="video border border-dark" src="./img/d64c7ce3c53544a5aee16ba5c93df251 (1).mov" controls muted autoplay></video>
                 </div>
             </main>
             <footer>
