--- a/index.html
+++ b/index.html
@@ -152,10 +152,14 @@
     <!-- Imagenes packaging -->
     <div class="container-fluid">
       <div class="divImagenes">
-    <img src="./img/IMG-0939.JPG"  class="imagenPackaging"  alt="Packaging" />
-    <img src="./img/IMG-0673 (2).jpg" class="imagenPackaging" alt="Packaging" />
-  </div>
-  </div>
+        <img src="./img/IMG-0939.JPG" class="imagenPackaging" alt="Packaging" />
+        <img
+          src="./img/IMG-0673 (2).jpg"
+          class="imagenPackaging "
+          alt="Packaging"
+        />
+      </div>
+    </div>
     <!-- Footer -->
     <footer>
       <div class="d-flex justify-content-center">
