--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
                           <label for="floatingTextarea2">Comentario</label>
                         </div>
                       </div>
-                      <button type="submit" class="btn btn-primary">Enviar</button>
+                      <button type="submit" class="btn btn-primary sticky-bottom">Enviar</button>
                     </form>
                   </div>
                 </div>
