--- a/index.html
+++ b/index.html
@@ -105,26 +105,17 @@
           <div class="col-4">
             <h3 class="text-center">Contactanos!</h3>
             <form>
-              <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-2 col-form-label"
-                  >Email</label
-                >
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" />
-                </div>
+              <div class="container">
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
-              <div class="row mb-3">
-                <div class="form-floating">
-                  <textarea
-                    class="form-control"
-                    placeholder="Leave a comment here"
-                    id="floatingTextarea2"
-                    style="height: 100px"
-                  ></textarea>
-                  <label for="floatingTextarea2">Comentario</label>
-                </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Comentario</label>
+                <input type="textarea" class="form-control">
               </div>
               <button type="submit" class="btn btn-primary">Enviar</button>
+          </div>
             </form>
           </div>
         </div>
