Cambie los formularios

--- a/index.html
+++ b/index.html
@@ -106,16 +106,25 @@
             <h3 class="text-center">Contactanos!</h3>
             <form>
               <div class="container">
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label"
+                    >Email</label
+                  >
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label"
+                    >Comentario</label
+                  >
+                  <input type="textarea" class="form-control" />
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
               </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Comentario</label>
-                <input type="textarea" class="form-control">
-              </div>
-              <button type="submit" class="btn btn-primary">Enviar</button>
-          </div>
             </form>
           </div>
         </div>
@@ -146,7 +155,7 @@
         <img src="./img/IMG-0939.JPG" class="imagenPackaging" alt="Packaging" />
         <img
           src="./img/IMG-0673 (2).jpg"
-          class="imagenPackaging "
+          class="imagenPackaging"
           alt="Packaging"
         />
       </div>
