--- a/contacto.html
+++ b/contacto.html
@@ -56,36 +56,36 @@
             <div class="container-fluid">
               <div class="row">
                 <!-- Primera Columna -->
-                <div class="col-8">
+                <div class="col-6">
                     <h3 class="text-center">Escribinos!</h3>
-                    <form class="w-80">
-                      <div class="row mb-3">
-                        <label for="inputEmail3" class="col-sm-2 col-form-label"
-                          >Email</label
-                        >
-                        <div class="col-sm-10">
-                          <input type="email" class="form-control" id="inputEmail3" />
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="form-floating">
-                          <textarea
+                    <form>
+                      <div class="container">
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label"
+                            >Email</label
+                          >
+                          <input
+                            type="email"
                             class="form-control"
-                            placeholder="Leave a comment here"
-                            id="floatingTextarea2"
-                            style="height: 100px"
-                          ></textarea>
-                          <label for="floatingTextarea2">Comentario</label>
+                            id="exampleInputEmail1"
+                            aria-describedby="emailHelp"
+                          />
                         </div>
+                        <div class="mb-3">
+                          <label for="exampleInputPassword1" class="form-label"
+                            >Comentario</label
+                          >
+                          <input type="textarea" class="form-control" />
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar</button>
                       </div>
-                      <button type="submit" class="btn btn-primary sticky-bottom">Enviar</button>
                     </form>
                   </div>
                 </div>
               </div>
             <!-- Segunda Columna -->
-                <div class="col-4">
-                  <p class="fs-3 text-center">Datos contacto</p>
+                <div class="col-6">
+                  <p class="fs-3 text-center text-decoration-underline">Datos contacto</p>
                   <ul class="text-center">
                         <li>xuca.ceramiquitas@gmail.com</li>
                         <li>+5491140315445</li>
