--- a/productos.html
+++ b/productos.html
@@ -52,20 +52,51 @@
         </div>
       </nav>
     <!-- Contenido principal -->
-    <form>
+    <!-- Columna Porta Sahumerios -->
+    <h2 class="text-center text-decoration-underline">Porta Sahumerios</h2>
+    <div class="container">
+        <div class="row">
+          <div class="col">   
+            <img src="./img/porta2.jpg" class="img-thumbnail" alt="Porta sahumerio">
+          </div>
+          <div class="col">
+            <img src="./img/porta3.jpg" class="img-thumbnail" alt="Porta sahumerio">
+          </div>
+          <div class="col">
+            <img src="./img/porta4.jpg" class="img-thumbnail" alt="Porta sahumerio">
+          </div>
+        </div>
+      </div>
+      <!-- Columna Macetas -->
+      <h2 class="text-center text-decoration-underline">Macetas</h2>
+      <div class="container">
+          <div class="row">
+            <div class="col">
+              <img src="./img/maceta2.jpg" class="img-thumbnail" alt="Maceta">
+            </div>
+            <div class="col">
+              <img src="./img/maceta3.JPEG" class="img-thumbnail" alt="Maceta">
+            </div>
+            <div class="col">
+              <img src="./img/maceta4.JPG" class="img-thumbnail" alt="Maceta">
+            </div>
+          </div>
+        </div>
+        <!-- Columna Colgantes -->
+        <h2 class="text-center text-decoration-underline">Colgantes</h2>
         <div class="container">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Comentario</label>
-          <input type="textarea" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-    </div>
-      </form>
-
+            <div class="row">
+              <div class="col">
+                <img src="./img/colgante1.jpg" class="img-thumbnail" alt="Colgante">
+              </div>
+              <div class="col">
+                <img src="./img/colgante2.JPEG" class="img-thumbnail" alt="Colgante">
+              </div>
+              <div class="col">
+                <img src="./img/colgante3.JPEG" class="img-thumbnail" alt="Colgante">
+              </div>
+            </div>
+          </div>
     <!-- Footer -->
     <footer>
       <div class="d-flex justify-content-center">
